--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "connect-history-api-fallback": "^1.2.0",
     "core-js": "^2.4.0",
     "del": "~2.2.0",
+    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "~2.0.1",
+    "gulp-nodemon": "^2.0.7",
     "gulp-protractor": "^2.4.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
@@ -31,6 +33,7 @@
     "require-dir": "~0.3.0",
     "run-sequence": "^1.2.1",
     "rxjs": "5.0.0-beta.6",
+    "socket.io": "^1.4.6",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
