--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "express-history-api-fallback": "^2.0.0",
     "favicons": "^4.7.1",
     "gulp-favicons": "^2.2.6",
     "html5shiv": "^3.7.3",
